documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32NET.VB

    Public Declare Function P13_HeapAlloc Lib "P13W32.DLL" Alias "_P13_HeapAlloc@8" (ByVal wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_HeapAllocAll Lib "P13W32.DLL" Alias "_P13_HeapAllocAll@8" (ByRef wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_HeapAllocEx Lib "P13W32.DLL" Alias "_P13_HeapAllocEx@12" (ByVal configval As UInt16, ByVal wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_HeapWipe Lib "P13W32.DLL" Alias "_P13_HeapWipe@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_IndirectRd Lib "P13W32.DLL" Alias "_P13_IndirectRd@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_IndirectWr Lib "P13W32.DLL" Alias "_P13_IndirectWr@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_IntClear Lib "P13W32.DLL" Alias "_P13_IntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_IntConfig Lib "P13W32.DLL" Alias "_P13_IntConfig@12" (ByVal configval As UInt16, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_IntDisable Lib "P13W32.DLL" Alias "_P13_IntDisable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_IntEnable Lib "P13W32.DLL" Alias "_P13_IntEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_IntEnableCond Lib "P13W32.DLL" Alias "_P13_IntEnableCond@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_IntGet Lib "P13W32.DLL" Alias "_P13_IntGet@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_IntInstall Lib "P13W32.DLL" Alias "_P13_IntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_IntRd Lib "P13W32.DLL" Alias "_P13_IntRd@12" (ByRef typevalval As UInt16, ByRef infoval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Sub P13_IntReset Lib "P13W32.DLL" Alias "_P13_IntReset@4" (ByVal handleval As UInt32)
    Public Declare Function P13_IntStatus Lib "P13W32.DLL" Alias "_P13_IntStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_IntUninstall Lib "P13W32.DLL" Alias "_P13_IntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_IORdW Lib "P13W32.DLL" Alias "_P13_IORdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_IOWINRdW Lib "P13W32.DLL" Alias "_P13_IOWINRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_IOWINWrW Lib "P13W32.DLL" Alias "_P13_IOWINWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub P13_IOWrW Lib "P13W32.DLL" Alias "_P13_IOWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_KernDev Lib "P13W32.DLL" Alias "_P13_KernDev@8" (ByRef valueptr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernEnd Lib "P13W32.DLL" Alias "_P13_KernEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernIntClear Lib "P13W32.DLL" Alias "_P13_KernIntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernIntInstall Lib "P13W32.DLL" Alias "_P13_KernIntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernIntStatus Lib "P13W32.DLL" Alias "_P13_KernIntStatus@8" (ByRef valueptr As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernIntUninstall Lib "P13W32.DLL" Alias "_P13_KernIntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernIORdW Lib "P13W32.DLL" Alias "_P13_KernIORdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernIOWrW Lib "P13W32.DLL" Alias "_P13_KernIOWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernMEMFillW Lib "P13W32.DLL" Alias "_P13_KernMEMFillW@16" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernMEMRdsW Lib "P13W32.DLL" Alias "_P13_KernMEMRdsW@16" (ByRef bufptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernMEMRdW Lib "P13W32.DLL" Alias "_P13_KernMEMRdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernMEMWrsW Lib "P13W32.DLL" Alias "_P13_KernMEMWrsW@16" (ByRef bufptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernMEMWrW Lib "P13W32.DLL" Alias "_P13_KernMEMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_KernStatus Lib "P13W32.DLL" Alias "_P13_KernStatus@12" (ByRef valueptr As UInt32, ByVal typeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ListConfig Lib "P13W32.DLL" Alias "_P13_ListConfig@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MakeLong Lib "P13W32.DLL" Alias "_P13_MakeLong@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function P13_Mask Lib "P13W32.DLL" Alias "_P13_Mask@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function P13_MEMWINRdB Lib "P13W32.DLL" Alias "_P13_MEMWINRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_MEMWINRdL Lib "P13W32.DLL" Alias "_P13_MEMWINRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MEMWINRdW Lib "P13W32.DLL" Alias "_P13_MEMWINRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_MEMWINWrB Lib "P13W32.DLL" Alias "_P13_MEMWINWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub P13_MEMWINWrL Lib "P13W32.DLL" Alias "_P13_MEMWINWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub P13_MEMWINWrW Lib "P13W32.DLL" Alias "_P13_MEMWINWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_Mod Lib "P13W32.DLL" Alias "_P13_Mod@8" (ByVal moda As UInt32, ByVal modb As UInt32) As UInt32
    Public Declare Function P13_ModeIsBC Lib "P13W32.DLL" Alias "_P13_ModeIsBC@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ModeIsMon Lib "P13W32.DLL" Alias "_P13_ModeIsMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ModeIsNotBC Lib "P13W32.DLL" Alias "_P13_ModeIsNotBC@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ModeIsNotMon Lib "P13W32.DLL" Alias "_P13_ModeIsNotMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ModeIsNotRT Lib "P13W32.DLL" Alias "_P13_ModeIsNotRT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ModeIsNotSerial Lib "P13W32.DLL" Alias "_P13_ModeIsNotSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ModeIsRT Lib "P13W32.DLL" Alias "_P13_ModeIsRT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ModeIsSerial Lib "P13W32.DLL" Alias "_P13_ModeIsSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ModeRd Lib "P13W32.DLL" Alias "_P13_ModeRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_ModeWr Lib "P13W32.DLL" Alias "_P13_ModeWr@8" (ByVal mode As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_MonClear Lib "P13W32.DLL" Alias "_P13_MonClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonConfigEx Lib "P13W32.DLL" Alias "_P13_MonConfigEx@16" (ByVal configval As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonConfigExx Lib "P13W32.DLL" Alias "_P13_MonConfigExx@20" (ByVal configval As UInt32, ByVal seqaddr As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonFilterSAEx Lib "P13W32.DLL" Alias "_P13_MonFilterSAEx@24" (ByVal taval As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonRdEx Lib "P13W32.DLL" Alias "_P13_MonRdEx@12" (ByRef buf As UInt16, ByVal bufcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_MonResume Lib "P13W32.DLL" Alias "_P13_MonResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonStart Lib "P13W32.DLL" Alias "_P13_MonStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonStatus Lib "P13W32.DLL" Alias "_P13_MonStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonStop Lib "P13W32.DLL" Alias "_P13_MonStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MsgBlockRd Lib "P13W32.DLL" Alias "_P13_MsgBlockRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MsgBlockWr Lib "P13W32.DLL" Alias "_P13_MsgBlockWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MsgCheck Lib "P13W32.DLL" Alias "_P13_MsgCheck@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_MsgCommRd Lib "P13W32.DLL" Alias "_P13_MsgCommRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MsgCommWr Lib "P13W32.DLL" Alias "_P13_MsgCommWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MsgConfig Lib "P13W32.DLL" Alias "_P13_MsgConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MsgConfigEx Lib "P13W32.DLL" Alias "_P13_MsgConfigEx@12" (ByVal configval As UInt32, ByVal cwd As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MsgCWD1Rd Lib "P13W32.DLL" Alias "_P13_MsgCWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_MsgCWD1Wr Lib "P13W32.DLL" Alias "_P13_MsgCWD1Wr@12" (ByVal cwd1 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_MsgCWD2Rd Lib "P13W32.DLL" Alias "_P13_MsgCWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_MsgCWD2Wr Lib "P13W32.DLL" Alias "_P13_MsgCWD2Wr@12" (ByVal cwd2 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_MsgErrorRd Lib "P13W32.DLL" Alias "_P13_MsgErrorRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_MsgErrorWr Lib "P13W32.DLL" Alias "_P13_MsgErrorWr@12" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_MsgFlagRd Lib "P13W32.DLL" Alias "_P13_MsgFlagRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_MsgFlagWr Lib "P13W32.DLL" Alias "_P13_MsgFlagWr@12" (ByVal msgflag As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
